add two biot articles